--- a/PDF.Generator.WebAPI/PDF.Generator.WebAPI.csproj
+++ b/PDF.Generator.WebAPI/PDF.Generator.WebAPI.csproj
@@ -8,7 +8,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="iTextSharp" Version="5.5.13.2" />
+        <PackageReference Include="PuppeteerSharp" Version="6.1.0" />
+        <PackageReference Include="Scriban" Version="5.4.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Templates" />
     </ItemGroup>
 
 </Project>
