update pdf generator service and api

--- a/PDF.Generator.WebAPI/appsettings.json
+++ b/PDF.Generator.WebAPI/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ReportTemplatePath": "./Templates"
+  "ReportTemplatePath": "/Users/surasith/Desktop/PDF.Generator.WebAPI/PDF.Generator.WebAPI/Templates",
+  "ReportOutputPath": "/Users/surasith/Desktop/PDF.Generator.WebAPI/PDF.Generator.WebAPI/Templates/Output"
 }
