update template path as relative

--- a/PDF.Generator.WebAPI/appsettings.json
+++ b/PDF.Generator.WebAPI/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ReportTemplatePath": "/Users/surasith/Desktop/PDF.Generator.WebAPI/PDF.Generator.WebAPI/Templates",
-  "ReportOutputPath": "/Users/surasith/Desktop/PDF.Generator.WebAPI/PDF.Generator.WebAPI/Templates/Output"
+  "ReportTemplatePath": "./Templates",
+  "ReportOutputPath": "./Templates/Output"
 }
