chore: update dependencies

--- a/PDF.Generator.WebAPI/appsettings.json
+++ b/PDF.Generator.WebAPI/appsettings.json
@@ -7,5 +7,5 @@
   },
   "AllowedHosts": "*",
   "ReportTemplatePath": "./Templates",
-  "ReportOutputPath": "./Templates/Output"
+  "ReportOutputPath": "../output"
 }
