test: add test project

--- a/PDF.Generator.WebAPI/PDF.Generator.WebAPI.csproj
+++ b/PDF.Generator.WebAPI/PDF.Generator.WebAPI.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Models/PdfGenerators/" />
       <Folder Include="Templates" />
     </ItemGroup>
 
