--- a/PDF.Generator.WebAPI/appsettings.json
+++ b/PDF.Generator.WebAPI/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ReportTemplatePath": "./Templates",
+  "ReportTemplatePath": "../templates",
   "ReportOutputPath": "../output"
 }
