feat: revise pdf generator service and add tests
* chore: update dependencies

* test: add test project

* wip: update test

* test: add test merge

--- a/PDF.Generator.WebAPI/appsettings.json
+++ b/PDF.Generator.WebAPI/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ReportTemplatePath": "./Templates",
-  "ReportOutputPath": "./Templates/Output"
+  "ReportTemplatePath": "../templates",
+  "ReportOutputPath": "../output"
 }
